@@ -15,6 +15,11 @@
   mani&egrave;re de le faire d&eacute;pend du navigateur.
 </P>
 
+<P>
+  <strong>NB</strong>&nbsp;: certaines pages n'&eacute;tant pas encore
+  traduites, vous ne pourrez les voir qu'en anglais.
+</P>
+
 <!--
     Instructions taken from http://www.debian.org/intro/cn
     Do not copy the whole page, we use only about 50 of the 400 lines.
