@@ -1,3 +1,9 @@
+2005-10-08  John Mandereau  <john.mandereau@free.fr>
+
+	* fr/contact.ihtml: add new mailing list lilypond-user-fr
+
+	* fr/about/browser-language.html: add warning saying some pages are not translated
+
 2005-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/install/devel.ihtml: Update autopackage, mingw.
